force-app/main/default/objects/Job_Posting__c/fields/Date_Close_By__c.field-meta.xml
<CustomField>
    <fullName>Date_Close_By__c</fullName>
    <formula>Date_Posted__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Default Closing Date is 30 from the day job is posted</inlineHelpText>
    <label>Date Close By</label>
    <type>Date</type>
</CustomField>