force-app/main/default/objects/Job_Posting__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Contract - 6 Months</fullName>
            </value>
            <value>
                <fullName>Contract - 12 Months</fullName>
            </value>
            <value>
                <fullName>Contract - Long Term</fullName>
            </value>
            <value>
                <fullName>Contract To Hire</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>