force-app/main/default/objects/Job_Posting__c/fields/Job_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference_Id__c</fullName>
    <externalId>true</externalId>
    <label>Job Reference Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>