force-app/main/default/objects/Job_Posting__c/validationRules/Check_Closing_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Closing_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Posted__c &gt;  Date_Closed__c</errorConditionFormula>
    <errorDisplayField>Date_Closed__c</errorDisplayField>
    <errorMessage>Job Closing Date cannot be in the prior to its Posting Date</errorMessage>
</ValidationRule>